# streamchange

./: README.md  example_CUSUM.py  example_CUSUMcollection.py  example_LordenPollakCUSUM.py  example_multivariateCUSUM.py  example_tuner.py  example_univariateCUSUM.py  explore_segment_summary.py  pyproject.toml  setup.py
.github/workflows/: tests.yaml
interactive/: example_CUSUMcollection.py  example_LordenPollakCUSUM.py  example_capa.py  example_cusum.py  example_cusum0.py  example_cusum0score.py  example_multivariateCUSUM.py  example_offline_pelt.py  example_pelt.py  example_segment_summary.py  example_tuner.py  example_univariateCUSUM.py  example_zeroprechangeCUSUM.py  explore_segment_summary.py
segment-stream/: CUSUM_segmentor.py  __init__.py  penalty_tuner.py  segmentor_collection.py  utils.py
streamchange/: base.py  penalties.py  tuners.py  utils.py
streamchange/amoc/: __init__.py  estimators.py  penalty_tuners.py  tests.py  threshold_tuner.py  window_segmentor.py
streamchange/amoc_test/: __init__.py  amoc_test.py  cusum.py  multivariate_cusum.py  univariate_cusum.py
streamchange/capa/: __init__.py  capa.py  savings.py
streamchange/conveniences/: __init__.py  fit_segmentation.py
streamchange/data/: simulate.py
streamchange/detector/: __init__.py  adaptive_cusum.py  change_detector.py  change_detector_collection.py  detection_window.py  lorden_pollak.py  segmentor.py  univariate_cusum.py  (+3 more)
tests/: test_amoc_tests.py  test_capa.py  test_fit_segmentation.py  test_pelt.py  test_segment_stats.py  test_sequential_detector.py  test_window_segmentor.py
(+50 files in other folders)
