[tool.poetry]
name = "streamchange"
version = "1.0.2"
description = "A package from segmenting streaming time series data into homogenous segments. The segmentation is based on statistical change-point detection (aka online/sequential/iterative change-point detection)."
authors = ["tveten <tveten@nr.no>"]
license = "BSD-3"
readme = "README.md"
repository= "https://github.com/NorskRegnesentral/streamchange"

[tool.poetry.dependencies]
python = ">=3.8"
pandas = ">=1.3"
numpy = ">=1.19"
numba = ">=0.56"
river = ">=0.14"
optuna = ">=3.1.1"

[tool.poetry.group.dev.dependencies]
black = ">=23.1.0"
nbformat = ">=5.7.3"
plotly = ">=5.13.0"
pytest = ">=7.2.1"
ipykernel = ">=6.23.0"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
